# smart_contract_sol

./: README.md
coins_transfer_solana/: .env.example  Cargo.toml  README.md  ec2-appspec.yml  ec2-buildspec.yml  ec2-service.service
coins_transfer_solana/.github/workflows/: deploy.yml
coins_transfer_solana/docs/: Log.md  Response.md  env example.md  migrations.md  response_handling.md  seeding_requirements.md  walletnotify.md  walletnotify.sh
coins_transfer_solana/migrations/: 20240729014636_users.sql  20240729014640_coins.sql  20240729014647_withdrawals.sql  20240729014658_conversion_rates.sql  20240729014724_users_wallets.sql  20240729014731_deposits.sql  20240730083610_configs.sql  20250705074557_wallets_add_fields.sql
coins_transfer_solana/src/: main.rs
coins_transfer_solana/src/cache/: cache_helper.rs  coins.rs  configs.rs  conversion_rates.rs  deposits.rs  mod.rs  users.rs  wallets.rs  withdrawals.rs
coins_transfer_solana/src/config/: app_config.rs  constants.rs  db_connection.rs  mod.rs  redis_connection.rs  redis_keys.rs  webhook_event_names.rs
coins_transfer_solana/src/entities/: coins.rs  configs.rs  conversion_rates.rs  deposits.rs  mod.rs  users.rs  users_wallets.rs  withdrawals.rs
coins_transfer_solana/src/handlers/: coins.rs  configs.rs  conversion_rates.rs  deposits.rs  health.rs  mod.rs  notify_webhooks.rs  users.rs  wallets.rs  withdrawals.rs
coins_transfer_solana/src/responses/: error_msgs.rs  error_msgs_impl.rs  http_response_impl.rs  mod.rs  success_msgs.rs  success_msgs_impl.rs
coins_transfer_solana/src/routes/: mod.rs  route_list.rs
coins_transfer_solana/src/services/: coins.rs  configs.rs  deposits.rs  (+8 more)
smart_contracts_client/: .gitignore  Cargo.toml  README.md
smart_contracts_client/src/: main.rs
(+31 files in other folders)
