[package]
name = "ebp_coins_module"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.11.0"
bigdecimal = { version = "0.4.8", features = [ "serde-json" ] }
bitcoincore-rpc = "0.19.0"
chrono = { version = "0.4.41", features = ["serde"] }
crypsol_logger = "0.1.0"
deadpool-redis = "0.21.1"
dotenvy = "0.15.7"
lazy_static = "1.5.0"
log = "0.4.27"
queues = "1.1.0"
regex = "1.11.1"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "macros", "chrono", "bigdecimal", "json"] }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
bip39 = { version = "2.2.0", features = ["rand"] }
walletd_hd_key = "0.2.0"
solana-derivation-path = "2.2.1"
solana-sdk = "2.3.1"
solana-client = "2.3.3"
solana-transaction-status = "2.3.3"
solana-commitment-config = "2.2.1"
solana-system-interface = "1.0.0"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"

#[lints.rust]
#unused = "allow"
