[package]
name = "smart_contracts_client"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-client = "2.3.3"
solana-sdk = "2.3.1"
anyhow = "1.0.98"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
solana-commitment-config = "2.2.1"


smart_contracts_solana = { path = "../smart_contracts_solana" }